feat: [SSCA-1164]: Add bulk listing of tickets to the ticket service client (#57094)
* feat:[SSCA-1164]: Adding call for bulk listing of tickets to the ticket Service client

* feat:[SSCA-1164]: Adding call for bulk listing of tickets to the ticket Service client

* feat:[SSCA-1164]: Added Identifiers as parameter as for the API call

* feat:[SSCA-1164]: setting correct path

* feat:[SSCA-1164]: added implementation for createTicket in remediation Tracker

* feat:[SSCA-1164]: moved RequestExecutor to client in SSCA so it can be used ahead as well

* feat:[SSCA-1164]: code format fix

* feat:[SSCA-1164]: open API spec fixing

* feat:[SSCA-1164]: open API spec fixing

* feat:[SSCA-1164]: changes based on comments

* feat:[SSCA-1164]: changes based on comments

* feat:[SSCA-1164]: changes based on comments
