# ssca-manager/service/src/main/java/io/harness/ssca/beans/ticket/TicketResponseDto.java
@@ -10,13 +10,12 @@ package io.harness.ssca.beans.ticket;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import lombok.Builder;
 import lombok.Data;
-import lombok.Getter;
 
 @Data
 @Builder
 @JsonIgnoreProperties(ignoreUnknown = true)
 public class TicketResponseDto {
   String id;
-  @Getter String externalId;
+  String externalId;
   String url;
 }
